--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -20,7 +20,7 @@
 										{{ msg | safe }}
 									</span>
 								{% else %}
-									Add your credentials
+									VirtualFleet-Recovery / Argo-France
 								{% endif %} 
 							</span>
 
