--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -29,13 +29,11 @@
                 <li>
                     <div class="dropdown drp-user">
                         <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
-                            <img src="/static/assets/images/user/avatar-1.jpg" class="img-radius wid-40"
-                                alt="User-Profile-Image">
+                            <i class="feather icon-user f-40"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end profile-notification">
                             <div class="pro-head">
-                                <img src="/static/assets/images/user/avatar-1.jpg" class="img-radius"
-                                    alt="User-Profile-Image">
+                                <i class="feather icon-user"></i>
                                 <span>
                                     {{ current_user.username }}
                                 </span>
