--- a/apps/templates/layouts/base_eg.html
+++ b/apps/templates/layouts/base_eg.html
@@ -3,7 +3,7 @@
 <head>
 
     <title>
-        VirtualFleet-Recovery - {% block title %}{% endblock %}
+        Flask Gradient Able - {% block title %}{% endblock %} | AppSeed
     </title>
 
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="" />
     <meta name="keywords" content="">
-    <meta name="author" content="G. Maze, Argo-France" />
+    <meta name="author" content="Codedthemes, AppSeed" />
 
     <!-- Favicon icon -->
     <link rel="icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
@@ -33,7 +33,7 @@
 	</div>
 	<!-- [ Pre-loader ] End -->
     
-    {% include 'includes/sidebar.html' %} 
+    {% include 'includes/sidebar_eg.html' %}
 
     {% include 'includes/navigation.html' %}
 
