Now with progress tracking

--- a/apps/templates/simulations/launcher.html
+++ b/apps/templates/simulations/launcher.html
@@ -78,11 +78,12 @@
                                     <table class="table table-hover m-b-0" id="tasks_table">
                                         <thead>
                                             <tr>
-                                                <th><span>Tasks</span></th>
+                                                <th><span>Tasks ID</span></th>
                                                 <th><span>User</span></th>
                                                 <th><span>Status</span></th>
                                                 <th><span>Number of floats</span></th>
                                                 <th><span>Label</span></th>
+                                                <th></th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -121,6 +122,21 @@
       console.log("Form reset");
     } );
 
+    html_progress = function(value, vmin=0, vmax=100, color='secondary'){
+        {#let html = "" + value;#}
+        let width = Number(value) * 100 / (vmax-vmin);
+        width = width.toFixed(0);
+        {#console.log(width);#}
+        let html = "";
+        html += "<div class='progress mt-1' style='height:4px;'>";
+        html += "<div class='progress-bar bg-" + color + " rounded' role='progressbar' style='width: "+width+"%;'";
+        html += " aria-valuenow='"+value+"'";
+        html += " aria-valuemin='"+vmin+"' ";
+        html += "aria-valuemax='"+vmax+"'>";
+        html += "</div></div>";
+        return html
+    }
+
     list_tasks = function(api) {
         $.ajax({
           url:api,
@@ -130,13 +146,41 @@
           success: function(data){
             var html = '';
             for(var i = 0; i < data.length; i++){
-            {#for(var i = data.length-1; i >= 0; i--){#}
+                var html_status = data[i].status + " ";
+                let progress = Number(data[i].progress);
+                let color;
+
+                if (data[i].status === 'queue') {
+                    html_status += "<i class='feather icon-clock'></i>";
+                    color = 'info';
+
+                } else if (data[i].status === 'error'){
+                    html_status += "<i class='feather icon-phone-missed'></i>";
+                    color = 'danger';
+
+                } else if (data[i].status === 'running'){
+                    html_status += "<i class='feather icon-phone-call'></i>";
+                    color = 'primary';
+
+                } else if (data[i].status === 'done'){
+                    html_status += "<i class='feather icon-phone-off'></i>";
+                    color = 'success';
+                    progress = 100;
+
+                } else {
+                    html_status += "<i class='feather icon-alert-circle'></i>";
+                    color = 'danger';
+                }
+
+                html_status += html_progress(progress, 0, 100, color);
+
                 html += '<tr>'+
                             '<td>' + data[i].id + '</td>' +
                             '<td>' + data[i].username + '</td>' +
-                            '<td>' + data[i].status + '</td>' +
+                            '<td>' + html_status + '</td>' +
                             '<td>' + data[i].nfloats + '</td>' +
                             '<td>' + data[i].label + '</td>' +
+                            '<td>' + 'Cancel' + '</td>' +
                         '</tr>';
                 }
             $('#tasks_table tbody').html(html);
