--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -16,6 +16,13 @@
 						<a href="{{ url_for('simulations_blueprint.simulations') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-fast-forward"></i></span><span
 								class="pcoded-mtext">Simulation form</span></a>
 					</li>
+					<li class="nav-item pcoded-hasmenu">
+						<a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-settings"></i></span><span
+								class="pcoded-mtext">Settings</span></a>
+						<ul class="pcoded-submenu">
+							<li><a href="{{ url_for('home_blueprint.user_profile') }}">Profile</a></li>
+						</ul>
+					</li>
 				</ul>
                 <div class="card text-center">
 					<div class="card-body px-3">
