--- a/apps/templates/simulations/launcher.html
+++ b/apps/templates/simulations/launcher.html
@@ -196,7 +196,7 @@
 
                 html += '<tr>'+
                             '<td>' + data[i].id + '</td>' +
-                            '<td>' + data[i].params.username + '</td>' +
+                            '<td>' + data[i].user.username + '</td>' +
                             '<td>' + html_status + '</td>' +
                             '<td>' + data[i].params.nfloats + '</td>' +
                             '<td>' + data[i].params.label + '</td>' +
