--- a/apps/static/assets/css/style.css
+++ b/apps/static/assets/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 /**======================================================================
 =========================================================================
 Template Name: Gradient able Bootstrap Admin Template
@@ -5703,7 +5706,8 @@ textarea.form-control-lg {
     height: 1rem;
     overflow: hidden;
     font-size: 0.75rem;
-    background-color: #e9ecef;
+    /*background-color: #e9ecef;*/
+    background-color: #E2E1E1FF;
     border-radius: 5px;
 }
 
