--- a/apps/templates/simulations/launcher.html
+++ b/apps/templates/simulations/launcher.html
@@ -3,7 +3,15 @@
 {% block title %} Simulations page {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
-{% block stylesheets %}{% endblock stylesheets %}
+{% block stylesheets %}
+
+    .progress {
+      background-color: #aef;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
+
+{% endblock stylesheets %}
 
 {% block content %}
 
