--- a/apps/templates/home/account.html
+++ b/apps/templates/home/account.html
@@ -38,6 +38,20 @@
                             </div>
 
                             <div class="form-group row">
+                                <label for="staticRole" class="col-sm-4 col-form-label">Role</label>
+                                <div class="col-sm-8">
+                                  <input type="text" readonly class="form-control-plaintext" id="staticRole" value="{{ current_user.role.label }}">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="staticPlan" class="col-sm-4 col-form-label">Subscription Plan</label>
+                                <div class="col-sm-8">
+                                  <input type="text" readonly class="form-control-plaintext" id="staticPlan" value="{{ current_user.plan.label }} ({{ current_user.plan.quota_tasks }} tasks every {{ current_user.plan.quota_refresh }} seconds)">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
                                 <label for="staticKey" class="col-sm-4 col-form-label">API key</label>
                                 <div class="col-sm-8">
                                   <input type="text" readonly class="form-control-plaintext" id="staticKey" value="{{ current_user.apikey }}">
