--- a/apps/templates/simulations/launcher.html
+++ b/apps/templates/simulations/launcher.html
@@ -66,7 +66,7 @@
 
 								<button type="submit" name="launch" class="btn btn-block btn-primary mt-2 mb-4">Launch !</button>
 								<button type="reset" name="reset" class="btn btn-block btn-danger mt-2 mb-4">Reset</button>
-
+                                {{ error }}
 							</form>
 
 						</div>
@@ -244,7 +244,8 @@
                 })
 
             })
-          }
+          },
+
         })
     };
 
