--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -14,7 +14,7 @@
 					</li>
 					<li class="nav-item">
 						<a href="{{ url_for('simulations_blueprint.simulations') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-fast-forward"></i></span><span
-								class="pcoded-mtext">Simulation form</span></a>
+								class="pcoded-mtext">Simulations</span></a>
 					</li>
 					<li class="nav-item pcoded-hasmenu">
 						<a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-settings"></i></span><span
